[package]
name = "express_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1.6.0", features = ["full"] }
http-body-util = "0.1.3"
hyper-util = {version = "0.1.11", features = ["tokio"]}
tokio = {version = "1.45.0", features = ["full"]}
serde = "1.0.219"
serde_json = "1.0.140"
bytes = "1.10.1"
once_cell = "1.21.3"
itoa = "1.0.15"
mime_guess = "2.0.5"
tokio-util = "0.7.15"
futures-core = "0.3.31"
futures-util = "0.3.31"
lru = "0.14.0"
infer = "0.19.0"
thiserror = "2.0.12"
log = "0.4.27"
local-ip-address = "0.6.5"
matchthem = "0.0.1"
smallvec = "1.15.0"
ahash = "0.8.12"
dashmap = "6.1.0"
quick_cache = "0.6.14"
async-trait = "0.1.88"
fern = "0.7.1"
chrono = "0.4.41"
cookie = "0.18.1"
