[package]
name = "express_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1.8.1", features = ["full"] }
http-body-util = "0.1.3"
hyper-util = {version = "0.1.11", features = ["tokio"]}
tokio = {version = "1.45.0", features = ["full"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.140"
bytes = "1.11.1"
once_cell = "1.21.3"
mime_guess = "2.0.5"
tokio-util = "0.7.15"
futures-util = "0.3.31"
thiserror = "2.0.12"
log = "0.4.29"
local-ip-address = "0.6.10"
smallvec = "1.15.1"
dashmap = "6.1.0"
quick_cache = "0.6.18"
async-trait = "0.1.89"
chrono = "0.4.44"
cookie = "0.18.1"
matchit = "0.9.1"
form_urlencoded = "1.2.2"
tokio-rustls = "0.26.4"
env_logger = "0.11.9"
httpdate = "1.0.3"
rustc-hash = "2.1.1"
